import 'package:flutter/material.dart';
import 'Product.dart';

class WishList{
  Product product;

  WishList({@required this.product});
}

